--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@ document.getElementById("snap").addEventListener("click", function() {
 	const canvas = document.getElementById('canvas');
 	const context = canvas.getContext('2d');
 	const video = document.getElementById('video');
-  context.drawImage(video, 0, 0, 640, 480);
-	const imgData = context.getImageData(0,0,100, 100);
-	console.log(imgData);
+  context.drawImage(video, 0, 0, canvas.width, canvas.height);
+	//get image data from a 10px x 10px space
+	//middle is 315 from left, and 235 down
+	const imgData = context.getImageData(315,235,10, 10);
+	//console.log(imgData);
 	console.log(findColor([imgData.data[0], imgData.data[1], imgData.data[2], imgData.data[3]]));
-  //context.putImageData(imgData, 100, 100);
+  //context.putImageData(imgData, 315, 235);
 });
 	</script>
 </body>
