--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--VideoColors-->
 	<script src="scripts/video-colors.js" ></script>
 	<!--ntc.js made by Chirag Mehta (See README.md for more details)-->
-	<script src="scripts/nts.js" ></script>
+	<script src="scripts/ntc.js" ></script>
 
 </head>
 <body>
