--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
 <div id="color">&nbsp;</div>
 	<!-- Photo capturing https://developers.google.com/web/fundamentals/media/capturing-images -->
 	<script>
-// Trigger photo take
-/* 		document.getElementById("snap").addEventListener("click", function() {
-	const canvas = document.getElementById('canvas');
-	const context = canvas.getContext('2d');
-	const video = document.getElementById('video');
-  context.drawImage(video, 0, 0, canvas.width, canvas.height);
-	//get image data from a 10px x 10px space
-	//middle is 315 from left, and 235 down
-	const imgData = context.getImageData(315,235,10, 10);
-	console.log(imgData.data[0], imgData.data[1], imgData.data[2], imgData.data[3]);
-	console.log(findColor([imgData.data[0], imgData.data[1], imgData.data[2], imgData.data[3]]));
-  //context.putImageData(imgData, 315, 235);
-}); */
+		const identifyColor = (rgb) => {
+			let n_color = ntc.name(findColor(rgb))[1];
+			//console.log(n_color);
+			document.getElementById("color").style.backgroundColor = findColor(rgb);
+			console.log("hue: ", getExactHue(getHue(rgb), calcLightness(rgb), findShade(rgb)), "\ncolor: ", n_color);
+		}
+
 		const colorStuff = () => {
 			const canvas = document.getElementById('canvas');
 			const context = canvas.getContext('2d');
@@ -49,11 +43,8 @@
 			const imgData = context.getImageData(315,235,10, 10);
 			//console.log(imgData);
 			let rgb = [imgData.data[0], imgData.data[1], imgData.data[2], imgData.data[3]];
-			let n_color = ntc.name(findColor(rgb))[1];
-			//console.log(n_color);
-			document.getElementById("color").style.backgroundColor = findColor(rgb);
-			console.log("hue: ", getExactHue(getHue(rgb), calcLightness(rgb), findShade(rgb)), "\ncolor: ", n_color);
-			//context.putImageData(imgData, 315, 235);
+			identifyColor(rgb);
+					//context.putImageData(imgData, 315, 235);
 		}
 		window.onload = videoSetup().then(videoFeed()).then(setInterval(colorStuff, 1000));
 	</script>
