--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,41 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<!--Start Bootstrap CDN-->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		 <!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+		<!-- Popper JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
 		<!-- Latest compiled JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<!--End Bootstrap CDN-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
+
 
 	</head>
 	<body>
-		<div hidden="true" id="video-wrapper">
+		<div id="outer-wrapper" class="container-fluid">
+			<div hidden="true" id="video-wrapper">
 			
 
-		</div>
-		<div hidden="false" id="homepage-wrapper">
+			</div>
+			<div id="homepage-wrapper" class="col-*12 h-100 my-auto">
+				<div id="top-button"class="nav navbar-nav navbar-fixed-bottom">
 
+				</div>
+				<div id="main" class= "" >
+				Hello, World!
+				</div>
+				<div id="bottom-button" class="nav navbar-nav navbar-fixed-bottom">
 
-		</div>
-		<div hidden="true" id="video-wrapper">
+				</div>
+			</div>
+			<div hidden="true" id="video-wrapper">
 			
 
+			</div>
 		</div>
 	</body>
 </html>
