--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,72 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" class="h-100">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<!-- Start Bootstrap CDN -->
 		 <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 		<!-- Popper JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
-
-
+		<!-- End Bootstrap CDN -->
+		<!-- FontAwesome -->
+		<script src="https://kit.fontawesome.com/5a58bd0200.js" crossorigin="anonymous"></script>
+		<style>
+			@media (prefers-color-scheme: light) {
+				body {
+					background-color: #F2F2F2;
+					color: black;
+				}
+				.navbar {
+				  background-color: #A0A0A0;
+				}
+			}
+			@media (prefers-color-scheme: dark) {
+				body {
+					background-color: black;
+					color: white;
+				}
+				.navbar {
+					background-color: #2E2E2E;
+				}
+			}
+			.py-3 {
+				padding-top: 2rem !important;
+				padding-bottom: 2rem !important;
+			}
+		</style>
 	</head>
-	<body>
-		<div id="outer-wrapper" class="container-fluid">
+	<body class="h-100">
+		<div id="outer-wrapper" class="w-100 h-100 d-flex container-fluid justify-content-center">
 			<div hidden="true" id="video-wrapper">
 			
 
 			</div>
-			<div id="homepage-wrapper" class="col-*12 h-100 my-auto">
-				<div id="top-button"class="nav navbar-nav navbar-fixed-bottom">
-
+			<div id="homepage-wrapper" class="w-100 h-100 d-flex justify-content-center container-fluid">
+				<div id="top-button"class="py-3 h-30 navbar navbar-nav fixed-top justify-content-center">
+					<i class="far fa-image fa-2x"></i>
 				</div>
-				<div id="main" class= "" >
-				Hello, World!
+				<div id="homepage-main" class= "w-100 py-5 row flex-row justify-content-center align-self-center">
+					<div id="homepage-main-content" class="w-100 h-100 py-3 flex-row justify-content-center align-self-center align-content-around">
+						<div id="homepage-name" class="h-50">
+							<h1 class="text-center">App Name</h1>
+						</div>
+						<div class="d-flex container h-50 flex-row justify-content-around">
+							<div id="homepage-help" class="">
+								<i class="fas fa-question fa-2x"></i>
+							</div>
+							<div id="homepage-settings" class="">
+								<i class="fas fa-cog fa-2x"></i>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div id="bottom-button" class="nav navbar-nav navbar-fixed-bottom">
-
+				<div id="bottom-button" class="py-3 h-30 navbar navbar-nav fixed-bottom justify-content-center">
+					<i class="fas fa-camera fa-2x"></i>
 				</div>
 			</div>
 			<div hidden="true" id="video-wrapper">
@@ -39,5 +74,21 @@
 
 			</div>
 		</div>
+		<script>
+			/*window.onload = () => {
+				if(window.matchMedia("(prefers-color-scheme: dark)")) {
+					document.body.style.backgroundColor = "black";
+					let navs = document.getElementsByClassName("navbar");
+					for (i in navs) {
+						if (navs[i].classList) {
+					
+							navs[i].classList.contains("bg-dark") ? null : navs[i].classList.add("bg-dark");
+						}
+					}
+				} else if(window.matchMedia("(prefers-color-scheme: light)")){
+					document.body.style.backgroundColor = "red";
+				}
+			} */
+		</script>
 	</body>
 </html>
