--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 				  background-color: #A0A0A0;
 				}
 			}
+
 			@media (prefers-color-scheme: dark) {
 				body {
 					background-color: black;
@@ -34,6 +35,9 @@
 					background-color: #2E2E2E;
 				}
 			}
+
+			@media (only screen and (max-width: 
+
 			.py-3 {
 				padding-top: 2rem !important;
 				padding-bottom: 2rem !important;
@@ -55,7 +59,8 @@
 						<div id="homepage-name" class="h-50">
 							<h1 class="text-center">App Name</h1>
 						</div>
-						<div class="d-flex container h-50 flex-row justify-content-around">
+						<br />
+						<div id="homepage-utils" class="d-flex container h-50 flex-row justify-content-around">
 							<div id="homepage-help" class="">
 								<i class="fas fa-question fa-2x"></i>
 							</div>
@@ -75,20 +80,20 @@
 			</div>
 		</div>
 		<script>
-			/*window.onload = () => {
-				if(window.matchMedia("(prefers-color-scheme: dark)")) {
-					document.body.style.backgroundColor = "black";
-					let navs = document.getElementsByClassName("navbar");
-					for (i in navs) {
-						if (navs[i].classList) {
-					
-							navs[i].classList.contains("bg-dark") ? null : navs[i].classList.add("bg-dark");
-						}
-					}
-				} else if(window.matchMedia("(prefers-color-scheme: light)")){
-					document.body.style.backgroundColor = "red";
-				}
-			} */
+			const adjustHomepageUtils = () => {
+				const width = document.documentElement.clientWidth;
+				const utils = document.getElementsById("homepage-utils");
+				if(width < 493) {
+					utils.classList.contains("justify-content-around") ? null : (() => {
+						utils.classList.contains("justify-content-center") ? utils.classList.remove() //RESUME HERE
+					})();
+				} else {
+					utils.classList.contains("justify-content-center
+				}			
+			}
+			document.onload = () => {adjustHomepageUtils()}
+			document.body.onresize = () => {adjustHomepageUtils()}
+
 		</script>
 	</body>
 </html>
