--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,13 @@
 			}
 		</style>
 		<script>
-			window.onload = () => {
+			window.addEventListener("DOMContentLoaded", () => {
 				if(navigator.onLine) {
 					//toggleIcons(true);
 				} else {
-					//toggleIcons(false)
+					toggleIcons(false)
 				}
-			}
+			});
 		</script>
 		<script>
 			const openVideo = () => {
