--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		<!-- End Bootstrap CDN -->
 		<!-- FontAwesome -->
 		<!--<script src="https://kit.fontawesome.com/5a58bd0200.js" crossorigin="anonymous"></script>-->
-		<link rel="stylesheet" href="../fonts/font-awesome-min.css/all.css" />
+		<link rel="stylesheet" href="../fonts/font-awesome-min.css/css/all.css" />
 		<script src="../scripts/content.js" defer></script>
 		<style>
 			@media (prefers-color-scheme: light) {
