Work on video page

--- a/public/temp-videopage.html
+++ b/public/temp-videopage.html
@@ -59,6 +59,19 @@
 				switchPage("videopage");
 			}
 		</script>
+		<script>
+			const startVideoStuff = () => {
+				videoSetup().then(videoFeed()).then(setInterval(()=>{console.log("hi");}, 1000));
+			}
+			const observer = new MutationObserver((mutations_list)=>{
+				mutations_list.forEach((mutation)=>{
+					mutation.addedNodes.forEach((added_node)=>{
+						//https://usefulangle.com/post/356/javascript-detect-element-added-to-dom
+						added_node_id == 'child' ? console.log(
+					});
+				});
+			});
+		</script>
 	</head>
 	<body class="h-100">
 		<div id="outer-wrapper" class="w-100 h-100 d-flex container-fluid justify-content-center">
@@ -66,7 +79,7 @@
 				<div id="video-top-button" class="py-3 h-30 navbar navbar-nav fixed-top justify-content-center" onclick="openHome()">
 					<i class="fas fa-home fa-2x"></i>
 				</div>
-				<div id="video-main" class= "w-100 py-5 row flex-row justify-content-center align-self-center">
+				<div id="video-main" class= "w-100 py-5 row flex-row justify-content-center align-self-center" onload="startVideoStuff()">
 					<canvas id="canvas" width="640" height="480" hidden ></canvas>
 					
 				</div>
