Fine tune stuff

--- a/public/temp-videopage.html
+++ b/public/temp-videopage.html
@@ -68,10 +68,9 @@
 				</div>
 				<div id="video-main" class= "w-100 py-5 row flex-row justify-content-center align-self-center" >
 					<canvas id="canvas" width="640" height="480" hidden ></canvas>
+					<!--<img src="../images/crosshairs-light.png" style="z-index: 3" />-->
 				</div>
-				<div>
-				  <button>Hi</button>
-				</div>
+				
 				<div id="video-bottom-bar" class="font-weight-bold py-3 h-30 navbar navbar-nav fixed-bottom justify-content-center">
 					<p class="font-weight-bold"></p>
 				</div>
