--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,10 @@
 		<!-- FontAwesome -->
 		<!--<script src="https://kit.fontawesome.com/5a58bd0200.js" crossorigin="anonymous"></script>-->
 		<link rel="stylesheet" href="../fontawesome-free-5.15.4-web/css/all.css" />
+		<!-- content.js -->
 		<script src="../scripts/content.js" defer></script>
+		<!-- video and color functions -->
+		<script src="../scripts/video-colors.js"></script>
 		<style>
 			@media (prefers-color-scheme: light) {
 				body {
@@ -56,7 +59,6 @@
 				switchPage("videopage");
 			}
 		</script>
-		
 	</head>
 	<body class="h-100">
 		<div id="outer-wrapper" class="w-100 h-100 d-flex container-fluid justify-content-center">
