--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>Khroma</title>
+		<link rel="icon" href="../images/khroma-icon.ico" />
+		<link rel="shortcut icon" href="../images/khroma-icon.ico" />
+		<link rel="apple-touch-icon" href = "../images/khroma-icon.png" />
+		<link rel="icon" sizes="100x100" href = "../images/khroma-icon.png" />
 		<!-- Start Bootstrap CDN -->
 		 <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
